--- a/css/style.css
+++ b/css/style.css
@@ -26,4 +26,32 @@ img{
 .parent{
 	display: flex;
 	flex-direction: row-reverse;
+	flex-wrap: wrap;
 }
+/*media queiries for mobile view*/
+@media screen and (max-width: 425px) {
+	.parent{
+		flex-direction: column;
+	}
+	.first{
+		background-color: #c45e45;
+	}
+}
+/*tablet media quiries*/
+@media screen and (min-width: 426px) and (max-width: 768px){
+	.parent{
+		flex-direction: row-reverse;
+		justify-content: space-between;
+	}
+	.first,.second,.third,.forth{
+		background-color: #ddd;
+		border-radius: 20px;
+	    width: 300px;
+	}
+}
+
+
+
+
+
+
